# laocai

./: .gitignore  Dockerfile  README.md  build.gradle.kts  config.toml  config.yaml.example  dependencies.py  docker-compose.yml  group_at.json  logger_config.py  main.py  models.py  my_bot.py  mysqlclient-2.2.7-cp312-cp312-win_amd64.whl  private.json  pyproject.toml  settings.gradle.kts
.github/workflows/: deploy.yml
ai/: agent.py  service.py
api/: message.py
app/: dependencies.py
app/api/: routes.py
config/: toml.py
configs/: app_config.py  logging_config.py
docker/: docker-compose.yaml
gradle/wrapper/: gradle-wrapper.properties
model/: __init__.py  event.py
model/dto/: event.py  message.py
model/enums/: data.py  event.py  message.py
services/: __init__.py  auth_service.py  database_service.py  dice_service.py  get_access_token.py  message_service.py  neko_service.py  on_group_at_message_create.py  verification_callback_url_service.py  verify_callback_url.py
services/neko/: neko.py
src/main/java/indi/dkx/laocai/: LaocaiApplication.java
src/main/java/indi/dkx/laocai/annotation/: EnableLaocaiBot.java  Filter.java  Listener.java
src/main/java/indi/dkx/laocai/config/: LaocaiBotConfiguration.java  QQBotConfig.java  WebClientConfig.java
src/main/java/indi/dkx/laocai/controller/: RootController.java
src/main/java/indi/dkx/laocai/core/: AutoSseListener.java  BotSender.java  EventDispatcher.java
src/main/java/indi/dkx/laocai/deserializer/: EventDeserializer.java  SegmentDeserializer.java
src/main/java/indi/dkx/laocai/game_handler/: Texas.java
src/main/java/indi/dkx/laocai/handler/: MyEventHandler.java  MyEventHandlers.java
src/main/resources/: application.yaml  application.yml  log4j2-spring.xml
src/test/java/indi/dkx/laocai/: LaocaiApplicationTests.java
test/: test_auth.py
tests/: test_config_injection.py  test_db.py
(+130 files in other folders)
